--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "orval": "orval --config ./orval.config.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -21,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,11 +40,15 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios": "^1.7.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "msw": "^2.3.1",
+    "orval": "^6.31.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
