--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,13 @@ services:
       - MYSQL_PASSWORD
     ports:
       - "3306:3306"
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
+      interval: 40s
+      timeout: 30s
+      retries: 5
+      start_period: 20s
+
   backend:
     build: ./backend
     volumes:
@@ -15,12 +22,12 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+
   frontend:
     build: ./frontend
     volumes:
       - ./frontend:/app/frontend
     ports:
       - "3000:3000"
-    depends_on:
-      - backend
