--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # orval
-/orval/api
+# /orval/api
 
 # dependencies
 /node_modules
